--- a/game/src/App.css
+++ b/game/src/App.css
@@ -1,5 +1,14 @@
+/* .target-sum-game-app {
+  display: flex;
+} */
+
 .game {
   margin-top: 15px;
+  display: flex;
+  /* width: 100%; */
+}
+
+.playground {
   display: inline-flex;
   flex-direction: column;
   align-items: center;
@@ -35,6 +44,12 @@
   display: inline-block;
 }
 
+.scoreboard {
+  margin-top: 15px;
+  width: 50%;
+  padding-right: 35px;
+}
+
 .footer {
   display: flex;
   width: 90%;
@@ -55,4 +70,31 @@
   height: 50px;
   font-weight: bold;
   font-size: 15px;
+}
+
+table {
+  width: 100%;
+  text-align: center;
+}
+
+th {
+  color: rgb(65, 65, 66);
+  font-size: 200%;
+}
+
+td {
+  padding-top: 15px;
+  font-size: 180%;
+}
+
+td:nth-child(1) {
+  color: rgb(3, 100, 228);
+}
+
+td:nth-child(2) {
+  color: rgb(3, 211, 97);
+}
+
+td:nth-child(3) {
+  color: rgb(247, 210, 1);
 }
